# Feather-Auto

./: .gitignore  README.md  dashboard.html  pyproject.toml  requirements.txt  setup.cmd  start-feather.cmd
feather_auto/: __init__.py  cli.py  coordination.py  coordination_server.py  dashboard_lifetime.py  dashboard_server.py  download_task_slides.py  review_task_slides.py  task_history.py
scripts/: install-windows.cmd  setup-windows.ps1  start-feather.ps1
tests/: test_adaptive_search.py  test_cli_fast_claim.py  test_cli_low_latency.py  test_cli_pagination.py  test_coordination.py  test_curl_parsing.py  test_dashboard_credentials.py  test_dashboard_lifetime.py  test_pagination.py  test_task_history.py
