[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feather-auto"
version = "0.1.0"
description = "Monitor and optionally claim Feather tasks matching batch filters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
feather-auto = "feather_auto.cli:main"
